<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/startup_hide_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="" />

    <TextView
        android:id="@+id/startup_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/startup_hide_text"
        android:gravity="center"
        android:textSize="60dp"
        android:text="@string/app_name" />

    <EditText
        android:id="@+id/startup_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startup_hide_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:inputType="textPassword"
        android:hint="@string/input_password"
        android:singleLine="true"
        android:gravity="center" />

    <TextView
        android:id="@+id/startup_author_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/author_name" />

    <TextView
        android:id="@+id/startup_version_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/app_version" />

    <Button
        android:id="@+id/startup_ok_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startup_password_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_alignLeft="@id/startup_password_text"
        android:layout_alignRight="@id/startup_password_text"
        android:text="@string/ok_button" />
</RelativeLayout>
