<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/dialog_search_ext_file_name_all"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/dialog_search_ext_file_name_all_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:singleLine="true"
        android:layout_below="@+id/textView2" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_search_ext_file_name_all_edit"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/dialog_search_ext_file_name_one"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/dialog_search_ext_file_name_one_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:singleLine="true"
        android:layout_below="@+id/textView32" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_search_ext_file_name_one_edit"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/dialog_search_ext_file_name_not"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/dialog_search_ext_file_name_not_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:singleLine="true"
        android:layout_below="@+id/textView42" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_search_ext_file_name_not_edit"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/dialog_search_type_file"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/dialog_search_ext_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/textView52" />

    <TextView
        android:id="@+id/textView62"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_search_ext_type_spinner"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/dialog_search_disk" />

    <Spinner
        android:id="@+id/dialog_search_ext_disk_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView62"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"/>

</RelativeLayout>