<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/dialog_search_file_name"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/dialog_search_file_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:singleLine="true"
        android:layout_below="@+id/textView2"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_search_file_name_edit"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/dialog_search_file_type"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <Spinner
        android:id="@+id/dialog_search_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_search_type_spinner"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/dialog_search_disk" />

    <Spinner
        android:id="@+id/dialog_search_disk_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"/>

</RelativeLayout>