<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/dialog_sync_ip"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"/>

    <EditText
        android:id="@+id/dialog_sync_ip_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:singleLine="true"
        android:maxLength="15"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:layout_below="@+id/textView21" />

    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_sync_ip_edit"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/dialog_sync_port"
        android:textSize="18dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/dialog_sync_port_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:singleLine="true"
        android:maxLength="7"
        android:inputType="number"
        android:digits="0123456789"
        android:layout_below="@+id/textView31" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dialog_sync_port_edit"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:textSize="18dp"
        android:textStyle="bold"
        android:text="@string/dialog_sync_key" />

    <EditText
        android:id="@+id/dialog_sync_key_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:singleLine="true"
        android:digits="0123456789ABCDEF"
        android:layout_below="@+id/textView41" />

</RelativeLayout>